@@ -1,6 +1,12 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.138 2005/01/05 00:17:37 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.139 2005/01/05 20:18:05 wolf31o2 Exp $
+
+  05 Jan 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  livecd/runscript-support/livecdfs-update.sh, targets/stage1/stage1.sh:
+  Updated livecdfs-update.sh to modify inittab to use bashlogin. Updated
+  targets/stage1/stage1.sh to no longer clean /var/db/pkg, which should fix
+  the brokenness of a stage1 tarball.
 
   04 Jan 2005; John Davis <zhen@gentoo.org> catalyst:
   patch for pvdabeel@gentoo.org. -f and -C can now be used together on the
